Fixed profile pic distort on main.

--- a/styles/main.css
+++ b/styles/main.css
@@ -159,7 +159,7 @@ body {
 
     .profilePic {
         max-width: 55px;
-        max-height: 55px;
+        height: 55px;
         width: 100%;
         object-fit: cover;
         border-radius: 50%;
